fixed text overlaping

--- a/src/components/atricles/articleCard.module.scss
+++ b/src/components/atricles/articleCard.module.scss
@@ -17,7 +17,7 @@
     height: 6.5rem;
 
     @media only screen and (max-width: $breakpoint-xl) {
-      margin-bottom: 0;
+      height: fit-content;
     }
   }
 
